--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travel Blog</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="https://rie-effort.github.io/engineer_practice2/style.css">
 </head>
 <body>
   <header id="header">
@@ -23,15 +23,15 @@
       <div class="flex">
         <ul>
         <li>
-      <img src="../image/image1.jpg" alt="画像1">
+      <img src="https://rie-effort.github.io/engineer_practice2/image1.jpg" alt="画像1">
       <p>テキスト</p>
       </li>
     <li>
-      <img src="../image/image2.jpg" alt="画像2">
+      <img src="https://rie-effort.github.io/engineer_practice2/image2.jpg" alt="画像2">
       <p>テキスト</p>
     </li>
     <li>
-      <img src="../image/image4.jpg" alt="画像3">
+      <img src="https://rie-effort.github.io/engineer_practice2/image4.jpg" alt="画像3">
       <p>テキスト</p>
     </li>
   </ul>
@@ -41,19 +41,19 @@
       <main>
         <article>
         <h3>タイトルテキスト</h3>
-        <img src="../image/image5.jpg" alt="画像4">
+        <img src="https://rie-effort.github.io/engineer_practice2/image5.jpg" alt="画像4">
         <p>本文テキスト</p>
         <div class="readmore"><a href="#">Read More</a></div>
       </article>
       <article>
         <h3>タイトルテキスト</h3>
-        <img src="../image/image6.jpg" alt="画像5">
+        <img src="https://rie-effort.github.io/engineer_practice2/image6.jpg" alt="画像5">
         <p>本文テキスト</p>
         <div class="readmore"><a href="#">Read More</a></div>
       </article>
       <article>
         <h3>タイトルテキスト</h3>
-        <img src="../image/image7.jpg" alt="画像6">
+        <img src="https://rie-effort.github.io/engineer_practice2/image7.jpg" alt="画像6">
         <p>本文テキスト</p>
         <div class="readmore"><a href="#">Read More</a></div>
       </article>
@@ -62,15 +62,15 @@
     <aside id="sidebar">
       <div class="author">
         <nav>
-      <img src="../image/image3.jpg" alt="プロフィール画像">
+      <img src="https://rie-effort.github.io/engineer_practice2/image3.jpg" alt="プロフィール画像">
       <h3>テキスト</h3>
       <p class="Profile">テストテストテスト</p>
     </div>
     <div class="ranking">
       <h3>Ranking</h3>
-        <img src="../image/image8.jpg" alt="画像7">
+        <img src="https://rie-effort.github.io/engineer_practice2/image8.jpg" alt="画像7">
         <p>本文テキスト</p>
-        <img src="../image/image10.jpg" alt="画像8">
+        <img src="https://rie-effort.github.io/engineer_practice2/image10.jpg" alt="画像8">
         <p>本文テキスト</p>
         </div>
       </nav>
